--- a/src/app/Components/Pages/Product/view-products/view-products.component.html
+++ b/src/app/Components/Pages/Product/view-products/view-products.component.html
@@ -6,39 +6,36 @@
     </a>
   </header>
 
-  <div class="table-container">
-    <ng-container *ngIf="products$ | async as products; else loading">
-      <table *ngIf="products.length > 0; else noItems">
-        <thead>
-          <tr>
-            <th>Image</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let product of products">
-            <td><img [src]="product.imageUrl" [alt]="product.name" (error)="onImageError($event)" class="item-image"></td>
-            <td data-label="Name">{{ product.name }}</td>
-            <td data-label="Description">{{ (product.description | slice:0:70) + (product.description.length > 70 ? '...' : '') }}</td>
-            <td data-label="Actions" class="actions-cell">
-              <a [routerLink]="['/products/edit', product.id]" class="action-btn edit" title="Edit"><i class="fas fa-edit"></i></a>
-              <button (click)="openDeleteConfirmation(product.id)" class="action-btn delete" title="Delete"><i class="fas fa-trash"></i></button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </ng-container>
+  <ng-container *ngIf="products$ | async as products; else loading">
+    <div *ngIf="products.length > 0; else noItems" class="products-grid">
+      <!-- Product Card -->
+      <div *ngFor="let product of products" class="product-card">
+        <div class="product-image-container">
+          <img [src]="product.imageUrl" [alt]="product.name" (error)="onImageError($event)" class="product-image">
+        </div>
+        <div class="product-info">
+          <h3 class="product-name">{{ product.name }}</h3>
+          <p class="product-description">{{ (product.description | slice:0:100) + (product.description.length > 100 ? '...' : '') }}</p>
+        </div>
+        <div class="product-actions">
+          <a [routerLink]="['/products/edit', product.id]" class="action-btn edit" title="Edit">
+            <i class="fas fa-edit"></i> Edit
+          </a>
+          <button (click)="openDeleteConfirmation(product.id)" class="action-btn delete" title="Delete">
+            <i class="fas fa-trash"></i> Delete
+          </button>
+        </div>
+      </div>
+    </div>
+  </ng-container>
 
-    <ng-template #loading>
-      <div class="loading-state"><i class="fas fa-spinner fa-spin"></i><p>Loading products...</p></div>
-    </ng-template>
+  <ng-template #loading>
+    <div class="state-message"><i class="fas fa-spinner fa-spin"></i><p>Loading products...</p></div>
+  </ng-template>
 
-    <ng-template #noItems>
-      <div class="empty-state"><i class="fas fa-box-open"></i><p>No products found. Start by adding a new one!</p></div>
-    </ng-template>
-  </div>
+  <ng-template #noItems>
+    <div class="state-message"><i class="fas fa-box-open"></i><p>No products found. Start by adding a new one!</p></div>
+  </ng-template>
 </div>
 
 <app-confirmation-modal
