--- a/src/app/Components/Widgets/sidebar/sidebar.component.html
+++ b/src/app/Components/Widgets/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
     <button class="close-btn" (click)="closeSidebar()"><i class="fas fa-times"></i></button>
   </div>
   <ul class="nav-list">
-    <li><a routerLink="/home" routerLinkActive="active" (click)="closeSidebar()" class="nav-item"><i class="fas fa-home"></i> <span>Home</span></a></li>
-    <li><a routerLink="/products" routerLinkActive="active" (click)="closeSidebar()" class="nav-item"><i class="fas fa-th-large"></i> <span>All Products</span></a></li>
+    <li><a routerLink="/home" routerLinkActive="active" class="nav-item"><i class="fas fa-home"></i> <span>Home</span></a></li>
+    <li><a routerLink="/products" class="nav-item"><i class="fas fa-tag"></i> <span>AllProducts</span></a></li>
     <li><a routerLink="/categories" class="nav-item"><i class="fas fa-tag"></i> <span>AllCategory</span></a></li>
     <li><a routerLink="/brands" class="nav-item"><i class="fas fa-tag"></i> <span>Allbrands</span></a></li>
     <li><a routerLink="/mails" class="nav-item"><i class="fas fa-tag"></i> <span>AllMials</span></a></li>
