--- a/src/app/Components/Widgets/sidebar/sidebar.component.html
+++ b/src/app/Components/Widgets/sidebar/sidebar.component.html
@@ -9,6 +9,7 @@
     <li><a routerLink="/categories" class="nav-item"><i class="fas fa-tag"></i> <span>AllCategory</span></a></li>
     <li><a routerLink="/brands" class="nav-item"><i class="fas fa-tag"></i> <span>Allbrands</span></a></li>
     <li><a routerLink="/mails" class="nav-item"><i class="fas fa-tag"></i> <span>AllMials</span></a></li>
+    <li><a routerLink="/AllOffer" class="nav-item"><i class="fas fa-tag"></i> <span>AllOffer</span></a></li>
     <li><a routerLink="/brands" class="nav-item"><i class="fas fa-tag"></i> <span>AllUsers</span></a></li>
     <li><a routerLink="/brands" class="nav-item"><i class="fas fa-tag"></i> <span>AllTicket</span></a></li>
     <li><a routerLink="/brands" class="nav-item"><i class="fas fa-tag"></i> <span>AllWishlists</span></a></li>
