--- a/src/app/Components/Pages/Product/view-products/view-products.component.html
+++ b/src/app/Components/Pages/Product/view-products/view-products.component.html
@@ -15,6 +15,7 @@
         </div>
         <div class="product-info">
           <h3 class="product-name">{{ product.name }}</h3>
+          <h6 class="product-name">ID: {{ product.id }}</h6>
           <p class="product-description">{{ (product.description | slice:0:100) + (product.description.length > 100 ? '...' : '') }}</p>
         </div>
         <div class="product-actions">
