--- a/src/app/Components/Widgets/navbar/navbar.component.html
+++ b/src/app/Components/Widgets/navbar/navbar.component.html
@@ -20,10 +20,9 @@
       <a routerLink="/home"><i class="fas fa-bolt"></i><span>ProStore</span></a>
     </div>
     <div class="nav-links">
-      <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-      <a routerLink="/products" routerLinkActive="active">Products</a>
-      <a href="#">Deals</a>
-      <a href="#">Contact</a>
+      <!-- <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a> -->
+      <!-- <a routerLink="/products" routerLinkActive="active">Products</a> -->
+
     </div>
   </div>
 
